--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,11 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
         python{
-            buildPython "/Library/Frameworks/Python.framework/Versions/3.7/bin/python3/python3.7.exe"
-//            pip {
-//                install "pandas==0.24.2"
-//                install "numpy==1.16.1"
-//            }
+            pip {
+                install "pandas"
+                install "numpy"
+                install "sklearn"
+            }
         }
 
 
